# PN5180-esp

./: CMakeLists.txt  idf_component.yml
pn5180/: pn5180.c  pn5180.h  pn5180_FeliCa.c  pn5180_FeliCa.h  pn5180_iclass.c  pn5180_iclass.h  pn5180_iso14443.c  pn5180_iso14443.h  pn5180_iso15693.c  pn5180_iso15693.h
